--- a/Session-02-HTML_Deployment/Lab/01_layout_head.html
+++ b/Session-02-HTML_Deployment/Lab/01_layout_head.html
@@ -4,11 +4,12 @@
 <head>
   <!-- https://fonts.google.com/specimen/Sono -->
   <!-- Scripts ( Explain about scripts) -->
-  <script async src="https://www.example.com/example.js"></script>
-  <script defer src="https://www.example.com/example.js"></script>
+  <!-- TODO: Add some scripts here -->
+  <!-- <script async src="https://www.example.com/example.js"></script> -->
   <!-- Talk about performance here-->
 
   <!-- Styles ( Explain about styles)-->
+  <!-- TODO: Add some styles here -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap');
   </style>
@@ -20,6 +21,8 @@
   <meta name="og:title" content="Title of your web page for social media sharing">
   <meta name="og:description" content="Description of your web page for social media sharing">
   <meta name="og:image" content="URL of an image for social media sharing">
+  <!-- TODO: Add some meta tags here -->
+  <!-- TODO: Change title according to your hands on-->
   <title>My Portfolio</title>
 </head>
 
