--- a/Session-02-HTML_Deployment/Lab/02_html_tags.html
+++ b/Session-02-HTML_Deployment/Lab/02_html_tags.html
@@ -25,11 +25,13 @@
 <body>
 
   <!-- Anchor with different targets -->
+  <!-- TODO: Add some h2, h3, h4, h5 here-->
   <h1>Anchor with different targets:</h1>
   <!-- Anchor with absolute URL -->
   <p><a href="https://www.example.com/" target="_self">Link to example.com in the same tab</a></p>
   <p><a href="https://www.example.com/" target="_blank">Link to example.com in a new tab</a></p>
   <p><a href="#section1">Link to section 1 on this page</a></p>
+  <!-- TODO: Add some section to add href and navigate from here-->
   <!-- Anchor with relative URL -->
   <p><a href="/somepageinwebsite" target="_self">Link with relative url</a></p>
 
@@ -41,6 +43,7 @@
   <em>This text is emphasized.</em>
   <strong>This text is strong.</strong>
   <u>This text is underlined.</u>
+  <!-- TODO: Add some more text formats by exploring documentation-->
 
   <!-- Div and span with text -->
   <h1>Div and span with text:</h1>
@@ -57,7 +60,7 @@
   <img
     src="https://global-uploads.webflow.com/637495e24e982a81f63e724a/63c7ed93162028aa865e671b_plus-without-pattern-p-800.webp"
     alt="Pesto Image" width="300" height="200">
-
+  <!-- TODO: Add some images, try changing width and height-->
   <!-- Table -->
   <h1>Table:</h1>
   <table>
@@ -86,7 +89,7 @@
       </tr>
     </tbody>
   </table>
-
+  <!-- TODO: Add a table to display your skills in a table-->
   <!-- Ordered and unordered lists -->
   <h1>Ordered and unordered lists:</h1>
   <ul>
