--- a/Session-04_Advanced_HTML/lab/01_layout.html
+++ b/Session-04_Advanced_HTML/lab/01_layout.html
@@ -2,16 +2,11 @@
 <html lang="en">
 
 <head>
-  <!-- https://fonts.google.com/specimen/Sono -->
-  <!-- Scripts ( Explain about scripts) -->
-  <script async src="https://www.example.com/example.js"></script>
-  <script defer src="https://www.example.com/example.js"></script>
-
-  <!-- Styles ( Explain about styles)-->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap');
   </style>
   <!-- Meta Tags ( Explain about meta tags)-->
+  <!-- All about your portfolio goes here with name and descriptions and meta-->
   <meta name="description" content="Brief description of your web page">
   <meta name="keywords" content="List of comma-separated keywords relevant to your web page">
   <meta name="author" content="Your name or the name of the organization">
@@ -23,9 +18,7 @@
 </head>
 
 <body>
-
-
-
+  <!-- All your semantic HTML goes here-->
   <!-- Nav Bar -->
   <!-- Hero Section -->
   <!-- Skills Section -->
@@ -33,7 +26,6 @@
   <!-- Projects Section -->
   <!-- Contact Section -->
   <!-- page contents -->
-  <script src="https://www.example.com/example.js"></script>
 </body>
 
 </html>
