--- a/Session-14_JS_DOM_Window_Object/Lab/JS DOM/changing_HTML_DOM_Events/index.html
+++ b/Session-14_JS_DOM_Window_Object/Lab/JS DOM/changing_HTML_DOM_Events/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Finding Elements Example</title>
+    <title>Changing HTML using DOM Example</title>
 </head>
 
 <body>
